--- a/style.css
+++ b/style.css
@@ -283,9 +283,10 @@ a {
   .main-header .main-width {
     position: relative; }
   .main-header h1 {
-    width: 350px;
-    height: 174px;
-    background: url(images/pharmaclim-logo.png);
+    width: 220px;
+    height: 109px;
+    background: url(images/pharmaclim-logo.png) no-repeat;
+    background-size: 100% auto;
     float: left; }
     .main-header h1 a {
       width: 100%;
@@ -293,10 +294,10 @@ a {
       display: inline-block;
       text-indent: -9999999px; }
   .main-header .menu-toggle {
-    width: 84px;
-    height: 59px;
-    display: inline-block;
-    background: url(images/icon-menu.png);
+    width: 40px;
+    height: 27px;
+    background: url(images/icon-menu.png) no-repeat;
+    background-size: 100% auto;
     text-indent: -9999999px;
     float: right;
     margin-top: 70px; }
@@ -306,13 +307,15 @@ a {
     right: 0; }
     .main-header .social-icons .social {
       text-indent: -9999999px;
-      width: 24px;
-      height: 24px;
+      width: 18px;
+      height: 18px;
       display: inline-block; }
       .main-header .social-icons .social.facebook {
-        background: url(images/social-facebook.png); }
+        background: url(images/social-facebook.png) no-repeat;
+        background-size: 100% auto; }
       .main-header .social-icons .social.instagram {
-        background: url(images/social-instagram.png); }
+        background: url(images/social-instagram.png) no-repeat;
+        background-size: 100% auto; }
 
 .main-menu {
   display: none; }
